--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-asgiref==3.8.1
-Django==5.0.6
-sqlparse==0.5.0
+asgiref==3.7.2
+distlib==0.3.8
+Django==5.0.3
+filelock==3.13.1
+pillow==10.3.0
+platformdirs==4.2.0
+python-slugify==8.0.4
+sqlparse==0.4.4
+text-unidecode==1.3
 tzdata==2024.1
-
+virtualenv==20.25.1
